# rust-client

./: Cargo.toml  readme.md
client/: Cargo.toml
client/output/: client.js  client_bg.wasm  index.html
client/public/: index.html
client/src/: app.rs  lib.rs  main.rs
client/src/app/: components.rs  layout.rs  services.rs  state.rs
client/src/app/components/: graph.rs  mod.rs  windows.rs
client/src/app/components/animations/: mod.rs
client/src/app/components/popups/: project.rs
client/src/app/components/windows/: project.rs
client/src/app/layout/: left.rs  main.rs  menu.rs  panels.rs
client/src/app/layout/panels/: main.rs
client/src/app/services/: api.rs  auth.rs  easter_egg.rs  mod.rs
output/: egui_test.js  egui_test_bg.wasm
public/: index.html
scripts/: build.sh  build_web.sh
src/: app.rs
src/app/: layout.rs  state.rs
src/app/layout/: menu.rs  panels.rs
